# nebula-workspace

./: .gitignore  HEARTBEAT.md  IDENTITY.md  MEMORY.md  TASKS.md  TOOLS.md  TOOLS_SETUP.md  USER.md  build-apps.js  build-apps.sh  build-cycle65.sh  build-cycle73.sh  build-cycle97.sh  build_apps.py  build_cycle106.py  build_cycle115.py  build_cycle115.sh  build_cycle117_part3.sh  build_cycle140.py  build_cycle140.sh  build_cycle73_impl.py  build_cycle79.sh  build_cycle97.py  cycle106_apps.json  deploy-apps.sh  fix-repos.sh  gen-apps.sh  heartbeat-state.json  package-lock.json  package.json  process_cycle73.py  push_remaining.py  repair_cycle117.sh  run_build.py  setup-repos.sh
.openclaw/: workspace-state.json
.vercel/: project.json
ai-3201-recipe-generator/: package-lock.json  package.json
ai-3202-restaurant-menu/: package-lock.json  package.json
ai-3203-wine-pairing/: package-lock.json  package.json
ai-3204-food-photography/: package.json
ai-3205-kitchen-timer/: package-lock.json  package.json
ai-abm-list-builder/: package-lock.json  package.json
ai-activewear-athleisure-capsule/: package-lock.json  package.json
ai-ai-in-music-production/: package-lock.json  package.json
ai-ai-mastering/: package-lock.json  package.json
ai-api-ref-gen/: package-lock.json  package.json
ai-archaeology-survey/: package-lock.json  package.json
ai-board-deck/: package.json
single-file-memory-skill/: BUSINESS_PLAN.md  Cargo.toml  EXAMPLES.md  LICENSE.md  README.md  skill.yaml
single-file-memory-skill/python/: memvid_skill.py
single-file-memory-skill/src/: lib.rs
(+3916 files in other folders)
